@@ -7,6 +7,11 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  17 Oct 2004; <genone@gentoo.org> pym/portage.py:
+  Added a followSymlinks parameter to listdir() as otherwise it gets stuck in
+  an infinite loop when it encounters self-referencing symlinks, this behavior
+  was exhibited by the collision-protect feature.
+
   17 Oct 2004; Brian Harring <ferringb@gentoo.org> portage-locks.py: Tweaked 
   unlockfile, no point in attempting to relock the file for deletion, if you're 
   not deleting the lockfile (basically moved locking w/in if unlinkfile).
